# SIR_model_simulation

./: CMakeLists.txt  README.md  argument.cpp  argument.hpp  ball_main.cpp  balls.cpp  balls.hpp
Versione 1/: CMakeLists.txt  argument.cpp  ball_main.cpp  balls.hpp  library.hpp
Versione 2/: .gitignore  CMakeLists.txt  PerlinNoise.cpp  PerlinNoise.hpp  argument.cpp  argument.hpp  ball_main.cpp  balls.cpp  balls.hpp  elements.cpp  elements.hpp  library.hpp  speed.cpp  speed.hpp
Versione 2/pandemic_simulation_no_perlin/: CMakeLists.txt  ball_main.cpp  balls.cpp  elements.cpp
Versione 2/pandemic_simulation_perlin/: PerlinNoise.hpp  ball_main.cpp  balls.cpp  balls.hpp  elements.cpp  elements.hpp  library.hpp  speed.hpp
graphic_simulation/: CMakeLists.txt
graphic_simulation/pandemic_simulation_no_perlin/: ball_main.cpp  balls.cpp  balls.hpp  elements.cpp  elements.hpp
graphic_simulation/pandemic_simulation_perlin/: CMakeLists.txt  PerlinNoise.cpp  ball_main.cpp  balls.cpp  elements.cpp
relazione/: relazione.tex
